--- a/backend/src/assets/css/suppliers.css
+++ b/backend/src/assets/css/suppliers.css
@@ -51,6 +51,7 @@ div.suppliers .info-box {
     padding: 1px;
     display: flex;
     justify-content: center;
+    flex-direction: column;
   }
 }
 
